--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile files('libs/volley.jar')
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+
+
+//    compile 'com.android.support:recyclerview-v7:23.1.1'
+//    compile 'com.nineoldandroids:library:2.4.0'
+//    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.5@aar'
+    compile project(path: ':nrl')
 }
