--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile files('libs/volley.jar')
     compile 'com.android.support:recyclerview-v7:23.3.0'
 
-
+    compile 'com.android.support:cardview-v7:23.3.0'
 //    compile 'com.android.support:recyclerview-v7:23.1.1'
 //    compile 'com.nineoldandroids:library:2.4.0'
 //    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.5@aar'
