--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,23 +11,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.StartActivity"
-            >
+        <activity android:name=".activity.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.MainActivity"
-            android:launchMode="singleInstance"></activity>
-
+            android:launchMode="singleInstance" />
         <activity
             android:name=".activity.WebActivity"
-            android:parentActivityName=".activity.MainActivity" />
-
+            android:parentActivityName=".activity.MainActivity"/>
+        <activity
+            android:name=".activity.HistoryActivity"
+            android:parentActivityName=".activity.MainActivity"/>
     </application>
 
 </manifest>
